# assimilate-haskell

./: .gitignore  Makefile  README.md  hello.hs
.devcontainer/: Dockerfile  devcontainer.json
haskell-project/: Makefile  haskell-project.cabal
haskell-project/src/: MyLib.hs
marco-polo-cli/: CHANGELOG.md  Makefile  marco-polo-cli.cabal
marco-polo-cli/app/: Main.hs
myfirstapp/: myfirstapp.cabal
myfirstapp/app/: Main.hs
