cabal-version:      2.4
name:               marco-polo-cli
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable marco-polo-cli
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        optparse-applicative ^>=0.17.0.0
