cabal-version:      2.4
name:               myfirstapp
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable myfirstapp
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        haskell-say ^>=1.0.0.0
